infra/k8s/custom-apps/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: carbon-credit
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
apiVersion: v1
kind: Namespace
metadata:
  name: data
---
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
---
apiVersion: v1
kind: Namespace
metadata:
  name: ci
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: ai
---
apiVersion: v1
kind: Namespace
metadata:
  name: iiot-uat
